2010-05-27 sstein <sstein@geo.uzh.ch>
    added function to intersect polygons of one layer (in Tools>Analysis>One Layer)
    org.openjump.core.ui.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn
    
2010-05-27 michaudm <michael.michaud@free.fr>
    fixed bug ID:3007431 (loading empty postgis tables)
    improved mixed-case schema/table/column name management
    
2010-04-26 sstein <sstein@geo.uzh.ch>
    fixed error in median calculation of
    org.openjump.core.attributeoperations.AttributeOp 
    
2010-04-10 michaudm <michael.michaud@free.fr>
    improved UnionByAttribute adding better warnings and output messages if
    invalid geometries are found (may slow down the whole process)

2010-04-07 michaudm <michael.michaud@free.fr>
    improved ExplodeSelectedFeatures performance avoiding to clone many
    coordinates uselessly (where many means, for each GeometryCollection, total
    number of coord x number of single geometries)

2010-04-03 michaudm <michael.michaud@free.fr>
    add InvertSelectionPlugIn
    add Larry's SelectAllModifiedFeaturesPlugIn in the default-plugin.xml

2010-03-21 michaudm <michael.michaud@free.fr>
    SimpleQueryPlugIn : added geometric op for strict inclusion ("TFFTFF***")
    and fixed a bug in buffer function

2010-03-21 michaudm <michael.michaud@free.fr>
    org.geotools.shapefile.PolygonHandler
    Keep invalid linear rings in userData so that they can be retrieved
    Add a BeanTool to retrieve invalid shapefile rings

2010-03-15 beckerl <becker.larry@gmail.com>
    org.openjump.core.ui.plugin.layer.ExtractLayersByGeometry
    Fixed so that it works with GeometryCollection

2010-03-13 michaudm <michael.michaud@free.fr>
    Geometry Function Polygonize now returns Polygon or MultiPolygon
    instead of GeometryCollection

2010-03-13 michaudm <michael.michaud@free.fr>
    Fix a bug in com.vividsolutions.jump.workbench.ui.EditTransaction
    Point(null,null,0) in deleteFeature method throwed exception with JTS-1.11